@@ -9,19 +9,19 @@ import org.apache.kafka.clients.consumer.KafkaConsumer;
 
 import java.security.Security;
 import java.time.Duration;
-import java.util.Arrays;
+import java.util.List;
 
 public class KafkaConsumerClientApp {
 
-    public static void main(String[] args) {
-        Security.addProvider(new CustomProvider("admin", "1", "Migi custom provider"));
-        KafkaConsumer<String, String> consumer = new KafkaConsumer<>(KafkaProperties.getConsumerProperties(KafkaProperties.getCommonProperties()));
-        consumer.subscribe(Arrays.asList(KafkaTopicNames.TOPIC_READER));
-        while (true) {
-            ConsumerRecords<String, String> records = consumer.poll(Duration.ofSeconds(1L));
-            for (ConsumerRecord<String, String> record : records) {
-                System.out.printf("offset = %d, key = %s, value = %s%n", record.offset(), record.key(), record.value());
+      static void main(String[] args) {
+            Security.addProvider(new CustomProvider("admin", "1", "Migi custom provider"));
+            KafkaConsumer<String, String> consumer = new KafkaConsumer<>(KafkaProperties.getConsumerProperties(KafkaProperties.getCommonProperties()));
+            consumer.subscribe(List.of(KafkaTopicNames.TOPIC_READER));
+            while (true) {
+                  ConsumerRecords<String, String> records = consumer.poll(Duration.ofSeconds(1L));
+                  for (ConsumerRecord<String, String> record : records) {
+                        System.out.printf("offset = %d, key = %s, value = %s%n", record.offset(), record.key(), record.value());
+                  }
             }
-        }
-    }
+      }
 }
